--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
- <html lang="en">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,7 +23,8 @@
             <a href="index.html"><h1>David Chu's China Bistro</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>    
+              <span>Kosher Certified</span>
+            </p>
           </div>
 
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
